// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OIbInteger check OIbInteger with too small value 1`] = `
<div>
  <div
    class="form-group"
  >
    <label
      class=""
      for="name"
    >
      label
    </label>
    <input
      aria-invalid="true"
      class="oi-form-input is-invalid form-control"
      id="name"
      name="name"
      type="integer"
      value="12"
    />
    <div
      class="invalid-feedback"
    >
      Value should not be greater than 100
    </div>
  </div>
</div>
`;

exports[`OIbInteger check OIbInteger with value="a text" 1`] = `
<div>
  <div
    class="form-group"
  >
    <label
      class=""
      for="name"
    >
      label
    </label>
    <input
      aria-invalid="false"
      class="oi-form-input form-control"
      id="name"
      name="name"
      type="integer"
      value="12345678"
    />
    <div
      class="invalid-feedback"
    />
  </div>
</div>
`;

exports[`OIbInteger check change 1`] = `
<div>
  <div
    class="form-group"
  >
    <label
      class=""
      for="name"
    >
      label
    </label>
    <input
      aria-invalid="true"
      class="oi-form-input is-invalid form-control"
      id="name"
      name="name"
      type="integer"
      value="12"
    />
    <div
      class="invalid-feedback"
    >
      Value should not be greater than 100
    </div>
  </div>
</div>
`;
